# pystrictconfig

./: pyproject.toml  setup.py  tox.ini  upload_pypi.py
data/: basic_json_config.json  basic_yaml_config.yaml  basic_yaml_config_with_tag.yaml  simple_json_config.json  simple_yaml_config.yaml
src/: definitions.py
src/pystrictconfig/: __init__.py  core.py  custom.py  utils.py  yamlschema.py
tests/: test_basic_schema.py  test_complex_schema.py  test_custom.py  test_objects.py  test_simple.py  test_utils.py
